# django-unmigrate

./: Makefile  README.rst  pyproject.toml  requirements.txt
.github/workflows/: code.yaml  deploy.yaml  linters.yaml
django_unmigrate/: core.py  settings.py
django_unmigrate/management/commands/: unmigrate.py
dunm_sandbox/: commits.py  meta.py  settings.py
dunm_sandbox/myapp/: models.py
dunm_sandbox/myapp/migrations/: 0001_initial.py  0002_mymodel_tz_created.py  0003_mymodel_is_active.py  0003_mymodel_is_paid.py  0004_merge_20200502_0148.py  0005_auto_20200502_0149.py
dunm_sandbox/tests/: test_command.py  test_core.py
