[tool.poetry]
name = "django-unmigrate"
version = "0.1.2"
description = "Smart reversion of Django migrations based on Git diff"
authors = ["Lorenzo Peña <lorinkoz@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/lorinkoz/django-unmigrate"
keywords = ["django", "git", "migrations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
]

[tool.poetry.dependencies]
python = "^3.6"
django = ">=2.0,<4.0"
gitpython = "^3.1.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = {extras = ["toml"], version = "^5.1"}

[tool.black]
line-length = 120

[tool.coverage.run]
source = ["django_unmigrate"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
